Updated LabExer 1 w/ html.

--- a/LabExcercise1/LabExcercise1.Rmd
+++ b/LabExcercise1/LabExcercise1.Rmd
@@ -25,143 +25,147 @@ library(polite)
 library(tidyverse)
 
 
-#Mens Tshirts
-urlName1 <- "https://www.amazon.co.uk/Mens-T-Shirts/b?ie=UTF8&node=1731028031"
+#Mens Caps
+urlName1 <- "https://www.amazon.com.au/Mens-Hats-Caps-Accessories/s?keywords=Men%27s+Hats+%26+Caps&rh=n%3A5130942051%2Cp_n_free_shipping_eligible%3A5363790051&c=ts&ts_id=5130942051"
 
 session <- bow(urlName1, user_agent = "For Educational Purposes")
 session
 
 
-amazonPage <- read_html(url)
+amazonPage <- read_html(urlName1)
 
-category1 <- "Mens Tshirt"
+Sys.sleep(10)
+
+category1 <- "Mens Hats and Caps"
 
 #name
-Name1 <- scrape(session) %>%
+Name_1 <- scrape(session) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name1
 
-#df
-Page1_name <- data.frame(Name = Name1_100)
-Page1_name
+
 
 #price1
-Price1 <- scrape(session) %>%
+Price_1 <- scrape(session) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price1
+
 
 #ratings
-Ratings1 <- scrape(session) %>%
+Ratings_1 <- scrape(session) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings1
+
 
 
 #Total number of reviews
-NumRev1 <- scrape(session) %>%
+NumRev_1 <- scrape(session) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev1
+
 
 
 #2nd page
-urlName2 <- "https://www.amazon.co.uk/s?k=Men%27s+T-Shirts&i=fashion-mens-clothing&rh=n%3A1731028031&page=2&c=ts&qid=1707354399&ts_id=1731028031&ref=sr_pg_2"
+urlName2 <- "https://www.amazon.com.au/Mens-Hats-Caps-Accessories/s?k=Men%27s+Hats+%26+Caps&page=2&c=ts&qid=1708140933&ts_id=5130942051&ref=sr_pg_2"
 session2 <- bow(urlName2, user_agent = "For Educational Purposes")
 session2
 
-Name2 <- scrape(session2) %>%
+Sys.sleep(10)
+
+Name_2 <- scrape(session2) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name2
+
 
 #price2
-Price2 <- scrape(session2) %>%
+Price_2 <- scrape(session2) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price2
+
 
 #Ratings
-Ratings2 <- scrape(session2) %>%
+Ratings_2 <- scrape(session2) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings2
+
 
 #Number of Ratings 
-NumRev2 <- scrape(session) %>%
+NumRev_2 <- scrape(session) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev2
+
 
 
 #3rd page
 
-urlName3 <- "https://www.amazon.co.uk/s?k=Men%27s+T-Shirts&i=fashion-mens-clothing&rh=n%3A1731028031&page=3&c=ts&qid=1707354459&ts_id=1731028031&ref=sr_pg_3"
+urlName3 <- "https://www.amazon.com.au/Mens-Hats-Caps-Accessories/s?k=Men%27s+Hats+%26+Caps&page=3&c=ts&qid=1708141481&ts_id=5130942051&ref=sr_pg_3"
 
 session3 <- bow(urlName3, user_agent = "For Educational Purposes")
 session3
+
+Sys.sleep(10)
+
 #name
-Name3 <- scrape(session3) %>%
+Name_3 <- scrape(session3) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name3
+
 
 
 #price
-Price3 <- scrape(session3) %>%
+Price_3 <- scrape(session3) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price3
+
 
 
 #Ratings
-Ratings3 <- scrape(session3) %>%
+Ratings_3 <- scrape(session3) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings3
+
 
 #Number of Ratings 
-NumRev3 <- scrape(session3) %>%
+NumRev_3 <- scrape(session3) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev3
 
 
 
-#Tshirt DataFrame 
+
+#mensHatsandCaps DataFrame 
 
 
-pagedf1 <- data.frame(Category = rep(category1,each=47),
-                      Name = Name1[2:48],
-                      Price = Price1[1:47],
-                      Rating = Ratings1[1:47],
-                      Number.of.Reviews = NumRev1[1:47]
+mensHatsandCaps_pagedf1 <- data.frame(Category = rep(category1,each=47),
+                      Name = Name_1[2:48],
+                      Price = Price_1[1:47],
+                      Rating = Ratings_1[1:47],
+                      Number.of.Reviews = NumRev_1[1:47]
                       )
-pagedf1
 
-pagedf2 <- data.frame(Category = rep(category1,each=47),
-                      Name = Name2[2:48],
-                      Price = Price2[1:47],
-                      Rating = Ratings2[1:47],
-                      Number.of.Reviews = NumRev2[1:47]
+
+mensHatsandCaps_pagedf2 <- data.frame(Category = rep(category1,each=47),
+                      Name = Name_2[2:48],
+                      Price = Price_2[1:47],
+                      Rating = Ratings_2[1:47],
+                      Number.of.Reviews = NumRev_2[1:47]
                       )
-pagedf2
 
 
-pagedf3 <- data.frame(Category = rep(category1,each=6),
-                      Name = Name3[2:7],
-                      Price = Price3[1:6],
-                      Rating = Ratings3[1:6],
-                      Number.of.Reviews = NumRev3[1:6]
+
+mensHatsandCaps_pagedf3 <- data.frame(Category = rep(category1,each=6),
+                      Name = Name_3[2:7],
+                      Price = Price_3[1:6],
+                      Rating = Ratings_3[1:6],
+                      Number.of.Reviews = NumRev_3[1:6]
                       
                       
                        )
-pagedf3
 
-mensTshirt <- rbind(pagedf1,pagedf2,pagedf3)
-mensTshirt             
-# view(mensTshirt)
+
+mensHatsandCaps <- rbind(mensHatsandCaps_pagedf1,mensHatsandCaps_pagedf2,mensHatsandCaps_pagedf3)
+             
+#view(mensHatsandCaps)
 
 
 
@@ -173,98 +177,104 @@ Product 2 Mens Shorts 100 products
 
 ```{r}
 #Mens Shorts
-url1 <- "https://www.amazon.co.uk/Mens-Shorts-Free-UK-Delivery-Amazon/s?keywords=Men%27s+Shorts&rh=n%3A1731002031%2Cp_76%3A419159031&c=ts&ts_id=1731002031"
+url1 <- "https://www.amazon.co.uk/b?node=1731002031&ref=sr_pg_1"
 
 session <- bow(url1, user_agent = "For Educational Purposes")
 
 
 
-amazonPage <- read_html(url)
+amazonPage <- read_html(url1)
+
+Sys.sleep(10)
 
 category2 <- "Mens Shorts"
 #name1
 Name1 <- scrape(session) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name1
+
 
 
 #price1
 Price1 <- scrape(session) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price1
+
 
 #ratings
 Ratings1 <- scrape(session) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings1
+
 
 #Total number of reviews
 NumRev1 <- scrape(session) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev1
+
 
 #2nd page
-url2 <- "https://www.amazon.co.uk/Mens-Shorts-Free-UK-Delivery-Amazon/s?k=Men%27s+Shorts&i=fashion-mens-clothing&rh=n%3A1731002031%2Cp_76%3A419159031&page=2&c=ts&qid=1707409377&ts_id=1731002031&ref=sr_pg_2"
+url2 <- "https://www.amazon.co.uk/s?k=Men%27s+Shorts&i=fashion-mens-clothing&rh=n%3A1731002031&page=2&c=ts&qid=1708143613&ts_id=1731002031&ref=sr_pg_2"
 session_2 <- bow(url2, user_agent = "For Educational Purposes")
 
+Sys.sleep(10)
 
 Name2 <- scrape(session_2) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name2
+
 
 #price2
 Price2 <- scrape(session_2) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price2
+
 
 #Ratings
 Ratings2 <- scrape(session_2) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings2
+
 
 
 #Number of Ratings 
 NumRev2 <- scrape(session_2) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev2
+
 
 #3rd page
 
-url3 <- "https://www.amazon.co.uk/Mens-Shorts-Free-UK-Delivery-Amazon/s?k=Men%27s+Shorts&i=fashion-mens-clothing&rh=n%3A1731002031%2Cp_76%3A419159031&page=3&c=ts&qid=1707411738&ts_id=1731002031&ref=sr_pg_3"
+url3 <- "https://www.amazon.co.uk/s?k=Men%27s+Shorts&i=fashion-mens-clothing&rh=n%3A1731002031&page=3&c=ts&qid=1708143800&ts_id=1731002031&ref=sr_pg_3"
 
 session_3 <- bow(url3, user_agent = "For Educational Purposes")
 session3
+
+Sys.sleep(10)
+
 #name
 Name3 <- scrape(session_3) %>%
   html_nodes("span.a-text-normal") %>%
   html_text
-Name3
+
 
 #price
 Price3 <- scrape(session_3) %>%
   html_nodes("span.a-offscreen") %>%
   html_text
-Price3
+
 
 #Ratings
 Ratings3 <- scrape(session_3) %>%
   html_nodes("span.a-icon-alt") %>%
   html_text
-Ratings3
+
 
 #Number of Ratings 
 NumRev3 <- scrape(session_3) %>%
   html_nodes("span.a-size-base.s-underline-text") %>%
   html_text
-NumRev3
+
 
 #Viewing of page
 
@@ -274,7 +284,7 @@ pagedf1 <- data.frame(Category = rep(category2,each=47),
                       Rating = Ratings1[1:47],
                       Number.of.Reviews = NumRev1[1:47]
                       )
-pagedf1
+
 
 pagedf2 <- data.frame(Category = rep(category2,each=47),
                       Name = Name2[2:48],
@@ -282,7 +292,7 @@ pagedf2 <- data.frame(Category = rep(category2,each=47),
                       Rating = Ratings2[1:47],
                       Number.of.Reviews = NumRev2[1:47]
                       )
-pagedf2
+
 
 
 pagedf3 <- data.frame(Category = rep(category2,each=6),
@@ -293,19 +303,19 @@ pagedf3 <- data.frame(Category = rep(category2,each=6),
                       
                       
                        )
-pagedf3
+
 
 
 MenShorts <- rbind(pagedf1,pagedf2,pagedf3)
-MenShorts               
-# view(MenShorts)
+               
+#view(MenShorts)
 
 
 #Merging of two products
 
-Products <- rbind(MenShorts,mensTshirt)
+Products <- rbind(MenShorts,mensHatsandCaps)
 Products
-# view(Products)
+#view(Products)
 ```
 ################################################################################
 10 PRODUCTS REVIEWS
@@ -318,26 +328,24 @@ PRODUCT 1
 library(httr)
 library(rvest)
 library(selectr)
-#1st Product 
-
-
 
 category <- "Mens Tshirt"
 
-scrapingNodes <- function(session,HTMLnodes){
+scrapingNodes <- function(session, HTMLnodes) {
   session %>% scrape() %>% html_nodes(HTMLnodes) %>% html_text()
 }
 
-prodDetails <- function(link){
-  session <- bow(link,user_agent = "For Educational Purpose")
-  
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
-  prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
-  prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
-  RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
-  prodRatings <- scrapingNodes(session,"span.a-icon-alt")[4:12]
-  
-  
+prodDetails <- function(link) {
+  session <- bow(link, user_agent = "For Educational Purpose")
+
+  Sys.sleep(4) # Add a delay of 4 seconds
+
+  Product <- scrapingNodes(session, "h1.a-size-large.a-text-ellipsis")
+  prodReviewer <- scrapingNodes(session, "span.a-profile-name")[3:11]
+  prodReview <- scrapingNodes(session, "span.a-size-base.review-text.review-text-content")[1:9]
+  RevDate <- scrapingNodes(session, "span.a-size-base.a-color-secondary.review-date")[3:11]
+  prodRatings <- scrapingNodes(session, "span.a-icon-alt")[4:12]
+
   TshirtProd <- data.frame(Category = category,
                            ProductName = Product,
                            Reviewer = prodReviewer,
@@ -347,20 +355,19 @@ prodDetails <- function(link){
   return(TshirtProd)
 }
 
-#Link for the seperate pages.
+
 link1 <- "https://www.amazon.co.uk/Jack-Jones-Mens-Jjecorp-T-Shirt/product-reviews/B09W38Q4WX/ref=cm_cr_dp_d_show_all_btm?ie=UTF8&reviewerType=all_reviews"
-page1<- prodDetails(link1)
+page1 <- prodDetails(link1)
 
 link2 <- "https://www.amazon.co.uk/Jack-Jones-Mens-Jjecorp-T-Shirt/product-reviews/B09W38Q4WX/ref=cm_cr_arp_d_paging_btm_next_2?ie=UTF8&reviewerType=all_reviews&pageNumber=2"
-page2<- prodDetails(link2)
+page2 <- prodDetails(link2)
 
 link3 <- "https://www.amazon.co.uk/JACK-JONES-12221269-Mens-T-Shirt/product-reviews/B0CTHXDTL5/ref=cm_cr_getr_d_paging_btm_next_3?ie=UTF8&reviewerType=all_reviews&pageNumber=3"
-page3<- prodDetails(link3)
+page3 <- prodDetails(link3)
 
-ProdReview1 <- rbind(page1,page2,page3)
-ProdReview1
-# view(ProdReview1)
+ProdReview1 <- rbind(page1, page2, page3)
 
+#view(ProdReview1)
 
 ```
 
@@ -383,6 +390,8 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
+  Sys.sleep(4)
+   
   Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
@@ -410,7 +419,7 @@ link3 <- "https://www.amazon.co.uk/BOSS-Mens-Pack-Classic-T-Shirt/product-review
 page3<- prodDetails(link3)
 
 ProdReview2 <- rbind(page1,page2,page3)
-ProdReview2
+
 # view(ProdReview2)
 
 ```
@@ -434,7 +443,9 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(5)
+   
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -460,7 +471,7 @@ link3 <- "https://www.amazon.co.uk/Fruit-Loom-Mens-Heavy-T-Shirt/product-reviews
 page3<- prodDetails(link3)
 
 ProdReview3 <- rbind(page1,page2,page3)
-ProdReview3
+
 # view(ProdReview3)
 
 
@@ -487,7 +498,9 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(7)
+   
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[4:12]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -513,7 +526,7 @@ link3 <- "https://www.amazon.co.uk/Amazon-Essentials-Short-Sleeve-Gingham-Button
 page3<- prodDetails(link3)
 
 ProdReview4 <- rbind(page1,page2,page3)
-ProdReview4
+
 # view(ProdReview4)
 
 
@@ -540,7 +553,9 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(6)
+  
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -566,7 +581,7 @@ link3 <- "https://www.amazon.co.uk/Urban-Classics-Oversized-Sleeves-Shoulders/pr
 page3<- prodDetails(link3)
 
 ProdReview5 <- rbind(page1,page2,page3)
-ProdReview5
+
 # view(ProdReview5)
 
 
@@ -592,8 +607,9 @@ scrapingNodes <- function(session,HTMLnodes){
 
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
-  
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+ 
+  Sys.sleep(4) 
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -619,7 +635,7 @@ link3 <- "https://www.amazon.co.uk/Under-Armour-Sportstyle-Training-Fast-Drying/
 page3<- prodDetails(link3)
 
 ProdReview6 <- rbind(page1,page2,page3)
-ProdReview6
+
 # view(ProdReview6)
 
 
@@ -644,7 +660,8 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(10)
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -670,7 +687,7 @@ link3 <- "https://www.amazon.co.uk/Tommy-Hilfiger-Mens-Logo-T-Shirt/product-revi
 page3<- prodDetails(link3)
 
 ProdReview7 <- rbind(page1,page2,page3)
-ProdReview7
+
 # view(ProdReview7)
 
 
@@ -696,7 +713,8 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(10)
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -722,7 +740,7 @@ link3 <- "https://www.amazon.co.uk/Champion-Classic-Jersey-Script-T-Shirt/produc
 page3<- prodDetails(link3)
 
 ProdReview8 <- rbind(page1,page2,page3)
-ProdReview8
+
 # view(ProdReview8)
 
 
@@ -747,7 +765,8 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(10)
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -773,7 +792,7 @@ link3 <- "https://www.amazon.co.uk/Jack-Jones-Jjegingham-Twill-Shirt/product-rev
 page3<- prodDetails(link3)
 
 ProdReview9 <- rbind(page1,page2,page3)
-ProdReview9
+
 # view(ProdReview9)
 
 
@@ -799,7 +818,8 @@ scrapingNodes <- function(session,HTMLnodes){
 prodDetails <- function(link){
   session <- bow(link,user_agent = "For Educational Purpose")
   
- Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
+  Sys.sleep(10)
+  Product <- scrapingNodes(session,"h1.a-size-large.a-text-ellipsis")
   prodReviewer <- scrapingNodes(session,"span.a-profile-name")[3:11]
   prodReview <- scrapingNodes(session,"span.a-size-base.review-text.review-text-content")[1:9]
   RevDate <- scrapingNodes(session,"span.a-size-base.a-color-secondary.review-date")[3:11]
@@ -826,7 +846,7 @@ page3<- prodDetails(link3)
 
 ProdReview10 <- rbind(page1,page2,page3)
 
-view(ProdReview10)
+#view(ProdReview10)
 
 
 ```
@@ -844,45 +864,5 @@ AllProducts <- rbind(ProdReview1,
                      ProdReview10
                      )
 AllProducts
-# view(AllProducts)
+#view(AllProducts)
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
